results/logs/gpu_36902.err
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp: In function ‘void hmm::cpu::algo::initialize_random(HMMModel&, unsigned int)’:
/user/7/dialloh/gpu_comp_hmm_regime/src/cpu/algo_hmm_cpu.cpp:402:54: warning: unused parameter ‘seed’ [-Wunused-parameter]
  402 | void initialize_random(HMMModel& model, unsigned int seed) {
      |                                         ~~~~~~~~~~~~~^~~~
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/algo_hmm_gpu.cu(161): error: calling a __device__ function("hmm::gpu::primitives::log_sum_exp(float, float)") from a __host__ function("baum_welch_step_gpu") is not allowed
      for(int i=0; i<N; ++i) log_likelihood = primitives::log_sum_exp(log_likelihood, h_alpha_last[i]);
                                              ^

1 error detected in the compilation of "/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/algo_hmm_gpu.cu".
make[2]: *** [src/cuda/CMakeFiles/hmm_cuda.dir/build.make:77: src/cuda/CMakeFiles/hmm_cuda.dir/algo_hmm_gpu.cu.o] Error 2
make[1]: *** [CMakeFiles/Makefile2:228: src/cuda/CMakeFiles/hmm_cuda.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
